added starter to index

--- a/flask-template/templates/index.html
+++ b/flask-template/templates/index.html
@@ -20,10 +20,9 @@
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <form>
-            <input type="text" name="email" placeholder="Enter your email"/>
-            <input type="submit" value="Submit"/>
+        <h1>Click the button below to get started!</h1>
+        <form method="POST" action="/quiz">
+            <input type="submit" value="Take the quiz!"/>
         </form>
     </body>
 </html>
