displays states now

--- a/flask-template/templates/quiz.html
+++ b/flask-template/templates/quiz.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-        <h1>Here is the quiz!/h1>
+        <h1>Here is the quiz!</h1>
         <form method="POST" action="/results">
             <input type="submit" value="Take the quiz!"/>
             {% for state in states %}
