adding input field

--- a/flask-template/templates/quiz.html
+++ b/flask-template/templates/quiz.html
@@ -9,6 +9,7 @@
             <input type="submit" value="Take the quiz!"/>
             {% for state in states %}
                 <p>Enter the capital for {{ state }}</p>
+                <input type="text" name={{ state }} placeholder="Enter your answer here"/>
             {% endfor %}
 
         </form>
