added mock grading system

--- a/flask-template/templates/quiz.html
+++ b/flask-template/templates/quiz.html
@@ -10,7 +10,7 @@
                 <p>Enter the capital for {{ state }}</p>
                 <input type="text" name={{ state }} placeholder="Enter your answer here"/>
             {% endfor %}
-
+            <input type="submit" value="Grade you answers!"/>
         </form>
     </body>
 </html>
