--- a/flask-template/templates/quiz.html
+++ b/flask-template/templates/quiz.html
@@ -5,13 +5,19 @@
     </head>
     <body>
         <h1>Here is the quiz!</h1>
+        <p>Enter the answers for as many questions that you know the answer to. Then hit grade you answers for results.</p>
         <form method="POST" action="/results">
-            {% for state in states %}
-                <p>Enter the capital for {{ state }}</p>
-                {% set state = ''.join(state.split()) %}
-                <input type="text" name= {{ state }} placeholder="Enter your answer here"/>
-            {% endfor %}
-            <input type="submit" value="Grade you answers!"/>
+            <div class="questions">
+                {% for state in states %}
+                
+                    <p>Enter the capital for {{ state }}</p>
+                    {% set state = ''.join(state.split()) %}
+                    <input type="text" name= {{ state }} placeholder="Enter your answer here"/>
+                {% endfor %}
+            </div>
+            <div class="turn-in">
+                <input type="submit" value="Grade you answers!"/>
+            </div>
         </form>
     </body>
 </html>
